fix for ward cards wrapping issue

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -87,6 +87,11 @@ html, body {
   flex-wrap: wrap;
   padding: 1rem 0 0.01rem 1rem;
   background-color: rgba(216,216,216, 0.3);
+
+  &--wards {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .wards {
@@ -836,7 +841,7 @@ button {
 
 .ward-details {
   position: relative;
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
   background-color: rgba(44, 152, 255, 0.25);
   max-width: 876px;
   margin: auto;
@@ -881,7 +886,6 @@ button {
   }
 
   .card {
-    flex-basis: 50%;
 
     a {
       text-decoration: none;
